feat: show/hide columns in cots view

--- a/app/view-cots/cots.html
+++ b/app/view-cots/cots.html
@@ -37,6 +37,38 @@
       <label for="searchbox">模糊查询 - 字段2</label>
       <input class="form-control input-sm margin-bottom" type="text" id="searchbox" ng-model="query_second">
 
+      <h2 class="h2">显示</h2>
+
+      <!-- check box for manufacture column show / hide -->
+      <div class="row no-margin-left">
+        <input type="checkbox" class="margin-bttom"
+        name="category-col-show"
+        ng-model="cotsCtrl.columnShow.category"
+        ng-true-value="true"
+        ng-false-value="false">
+        <label for="description-col-show">类别</label>
+      </div>
+
+      <!-- check box for manufacture column show / hide -->
+      <div class="row no-margin-left">
+        <input type="checkbox" class="margin-bttom"
+        name="manufacture-col-show"
+        ng-model="cotsCtrl.columnShow.manufacture"
+        ng-true-value="true"
+        ng-false-value="false">
+        <label for="description-col-show">厂商</label>
+      </div>
+
+      <!-- check box for ref_code column show / hide -->
+      <div class="row no-margin-left">
+        <input type="checkbox" class="margin-bttom"
+        name="ref_code-col-show"
+        ng-model="cotsCtrl.columnShow.ref_code"
+        ng-true-value="true"
+        ng-false-value="false">
+        <label for="description-col-show">编码</label>
+      </div>
+
     </div>  <!-- narrow column-->
 
     <!-- wide column -->
@@ -46,13 +78,14 @@
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
-            <th scope="col" class="text-nowrap">类别</th>
+            <th scope="col" class="text-nowrap" ng-show="cotsCtrl.columnShow.category">类别</th>
             <th scope="col" class="text-nowrap">名称</th>
             <th scope="col" class="text-nowrap">型号</th>
             <th scope="col" class="text-nowrap">参数</th>
             <th scope="col" class="text-nowrap">应用</th>
             <th scope="col" class="text-nowrap">状态</th>
-            <th scope="col" class="text-nowrap">详情</th>
+            <th scope="col" class="text-nowrap" ng-show="cotsCtrl.columnShow.manufacture">厂商</th>
+            <th scope="col" class="text-nowrap" ng-show="cotsCtrl.columnShow.ref_code">编码</th>
           </tr>
         </thead>
         <tbody>
@@ -61,60 +94,19 @@
                                                   filter: query_primary |
                                                   filter: query_second)">
 
-          <td class="text-nowrap">{{item.category}}</td>
+          <td class="text-nowrap" ng-show="cotsCtrl.columnShow.category">{{item.category}}</td>
           <td class="text-nowrap">{{item.item}}</td>
           <td>{{item.model}}</td>
           <td>{{item.specification}}</td>
           <td>{{item.application}}</td>
           <td>{{item.status}}</td>
-          <td>
-            <button class="btn btn-default btn-sm" 
-                    data-toggle="modal" data-target="#detailModal">查看详情
-            </button>
-          </td>
+          <td ng-show="cotsCtrl.columnShow.manufacture">{{item.manufacture}}</td>
+          <td ng-show="cotsCtrl.columnShow.ref_code">{{item.ref_code}}</td>
 
         </tr>
         </tbody>
       </table>
     </div>   <!-- wide column-->
 
-    <!-- create the detail modal -->
-    <div class="modal fade" id="detailModal" tabindex="-1">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-
-          <!-- The modal header -->
-          <div class="modal-header">
-            <button type="button" class="close"
-              data-dismiss="modal">x</button>
-            <h4 class="modal-title" id="detailModalLabel"> 详细信息:</h4>
-          </div>
-
-          <!-- The modal body -->
-          <div class="modal-body">
-            <div class="form-group" id="inputUserIDFormGroup">
-              <label class="control-label" for="inputUserID">
-                User ID</label>
-              <input class="form-control" type="text" 
-              id="inputUserID" placeholder="Enter your user ID">
-            </div>
-            <div class="form-group" id="inputPasswordFormGroup">
-              <label class="control-label" for="inputPassword">
-                Password</label>
-              <input class="form-control" type="password"
-              id="inputPassword" placeholder="Enter your password">
-            </div>
-          </div>
-
-          <!-- The modal footer -->
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default"
-              data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-primary">Login</button>
-          </div>
-
-        </div>
-      </div>
-    </div>
   </div>  <!-- row -->
 </div>  <!-- container -->
