<chore>update acronym.html

--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -38,9 +38,11 @@
       <!-- 筛选 模糊关键字 -->
       <div class="form-group">
         <label for="searchbox">模糊检索 - 字段1</label>
-        <input class="form-control input-sm margin-bottom" type="text" id="searchbox-prim" ng-model="query_prim">
+        <input class="form-control input-sm margin-bottom" type="text" 
+          id="searchbox-prim" ng-model="query_prim" placeholder="字段1、2是与的关系">
         <label for="searchbox">模糊检索 - 字段2</label>
-        <input class="form-control input-sm margin-bottom" type="text" id="searchbox-sub" ng-model="query_sub">
+        <input class="form-control input-sm margin-bottom" type="text"
+          id="searchbox-sub" ng-model="query_sub" placeholder="字段1、2是与的关系">
       </div>
 
     </div>  <!-- end narrow column -->
