--- a/app/view-equipment-q/equipment-query.html
+++ b/app/view-equipment-q/equipment-query.html
@@ -145,11 +145,11 @@
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
-            <th scope="col">工艺系统</th>
-            <th scope="col">设备名称</th>
-            <th scope="col">设备类型</th>
-            <th scope="col">Train</th>
-            <th scope="col">DCS机柜</th>
+            <th scope="col" class="text-nowrap">工艺系统</th>
+            <th scope="col" class="text-nowrap">设备名称</th>
+            <th scope="col" class="text-nowrap">设备类型</th>
+            <th scope="col" class="text-nowrap">Train</th>
+            <th scope="col" class="text-nowrap">DCS机柜</th>
             <th scope="col" ng-show="equipCtrl.columnShow.function_description">功能描述</th>
             <th scope="col" ng-show="equipCtrl.columnShow.ld_index">LD 页码</th>
             <th scope="col" ng-show="equipCtrl.columnShow.sd_index">SD 页码</th>
