--- a/app/view-dcs-component/dcscomp.html
+++ b/app/view-dcs-component/dcscomp.html
@@ -51,7 +51,7 @@
             <th scope="col">功能</th>
             <th scope="col">规格</th>
             <th scope="col">平台</th>
-            <th scope="col">系统</th>
+            <!-- <th scope="col">系统</th> -->
           </tr>
         </thead>
         <tbody>
@@ -60,12 +60,12 @@
           filter: compCtrl.hardCodeFilter[compCtrl.selectedName] |
           filter: query)">
 
-          <td class="text-nowrap">{{item.module}}</td>
-          <td>{{item.name}}</td>
+          <td>{{item.module}}</td>
+          <td class="text-nowrap">{{item.name}}</td>
           <td>{{item.feature}}</td>
           <td>{{item.specification}}</td>
           <td>{{item.platform}}</td>
-          <td>{{item.usage}}</td>
+          <!-- <td>{{item.usage}}</td> -->
         </tr>
         </tbody>
       </table>
