update dcs component query checkbox

--- a/app/view-dcs-component/dcscomp.html
+++ b/app/view-dcs-component/dcscomp.html
@@ -61,7 +61,7 @@
           filter: query)">
 
           <td>{{item.module}}</td>
-          <td class="text-nowrap">{{item.name}}</td>
+          <td class="text-nowrap">{{item.description}}</td>
           <td>{{item.feature}}</td>
           <td>{{item.specification}}</td>
           <td>{{item.platform}}</td>
