udpate dcs-comp-list.json and fix table text wrap problem

--- a/app/view-dcs-component/dcscomp.html
+++ b/app/view-dcs-component/dcscomp.html
@@ -48,9 +48,9 @@
           <tr>
             <th scope="col" class="text-nowrap">型号</th>
             <th scope="col" class="text-nowrap">类型</th>
-            <th scope="col">功能</th>
-            <th scope="col">规格</th>
-            <th scope="col">平台</th>
+            <th scope="col" class="text-nowrap">功能</th>
+            <th scope="col" class="text-nowrap">规格</th>
+            <th scope="col" class="text-nowrap">平台</th>
             <!-- <th scope="col">系统</th> -->
           </tr>
         </thead>
@@ -61,7 +61,7 @@
           filter: query)">
 
           <td>{{item.module}}</td>
-          <td class="text-nowrap">{{item.description}}</td>
+          <td>{{item.description}}</td>
           <td>{{item.feature}}</td>
           <td>{{item.specification}}</td>
           <td>{{item.platform}}</td>
