--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,8 @@
           <ul class="dropdown-menu close-collapse">
             <li><a href="#/dcs_component">平台硬件</a></li>
             <li><a href="#/cots">外购物资</a></li>
-            <!-- <li><a href="">平台维护</a></li> -->
+            <li role="seperator" class="divider"></li>
+            <li><a href="#/performance">性能参数</a></li>
           </ul>
           </li>
 
@@ -105,6 +106,7 @@
   <script src="./view-reactor_trip/rt_controller.js"></script>
   <script src="./view-dcs-component/dcs-comp-controller.js"></script>
   <script src="./view-cots/cots-controller.js"></script>
+  <script src="./view-performance/performance-controller.js"></script>
   <script>
     <!-- used to close collapse navbar automaticlly -->
     <!-- after clicking the menu -->
