update: change module from equipment-query to actuator; All related code and file names were changed

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
           </a>
           <ul class="dropdown-menu close-collapse">
             <li><a href="#/reactor_trip">Reactor Protection</a></li>
-            <li><a href="#/hardware-query">ESF</a></li>
+            <li><a href="#/esf-actuator">ESF</a></li>
           </ul>
           </li>  
 
@@ -100,7 +100,7 @@
   <script src="./view-dev/dev-controller.js"></script>
   <script src="./view-doc-q/doc-q-controller.js"></script>
   <script src="./view-main/main-controller.js"></script>
-  <script src="./view-equipment-q/equipmentApp.js"></script>
+  <script src="./view-actuator/actuator-controller.js"></script>
   <script src="./view-acronym/acronym-controller.js"></script>
   <script src="./view-tools/tools-controller.js"></script>
   <script src="./view-reactor_trip/rt_controller.js"></script>
