style<hwoto.html>

--- a/app/view-howto/howto.html
+++ b/app/view-howto/howto.html
@@ -1,4 +1,6 @@
-<div class=content>
-  The Howto page...
-  under construction...
+<div class=container>
+  <p class=jumbotron>
+    The Howto page...
+    under construction...
+  </p>
 </div>
