--- a/app/view-tools/tools.html
+++ b/app/view-tools/tools.html
@@ -43,6 +43,7 @@
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
+            <th scope="col">编号</th>
             <th scope="col">工具名称</th>
             <th scope="col" class="text-nowrap">最新版本</th>
             <th scope="col">简介</th>
@@ -52,6 +53,7 @@
         <tbody>
         <tr ng-repeat="item in (toolCtrl.items | filter: toolCtrl.hardCodeFilter[usage] | filter: query)">
 
+          <td>{{item['No.']}}</td>
           <td><a href="{{item.url}}" target="_blank">{{item.tool}} </a></td>
           <td>{{item.lastest_ver}}</td>
           <td>{{item.function_description}}</td>
