--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,9 @@
           <ul class="dropdown-menu close-collapse">
             <li><a href="#/doc-q">工作文档</a></li>
             <li><a href="#/acronym">术语查询</a></li>
+            <li role="seperator" class="divider"></li>
             <li><a href="#/tools">软件工具</a></li>
+            <li><a href="#/">岗位管理</a></li>
           </ul>
           </li>
 
