revised model and view for document query

--- a/app/view-doc-q/doc-q.html
+++ b/app/view-doc-q/doc-q.html
@@ -15,28 +15,28 @@
         <h2 class="h2">筛选</h2>
 
         <!-- 筛选1 选择适用文件 -->
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label>选择适用平台</label>
           <select class="form-control input-sm margin-bottom" ng-model="docq.selectedPlatform"
             ng-options="c.platform as c.platform for c in docq.selectOptions['platform']">
           </select>
-        </div>
+        </div>  -->
 
         <!-- 筛选3 选择文件类型 -->
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label>选择文件类型</label>
           <select class="form-control input-sm margin-bottom" ng-model="docq.selectedDocCat"
             ng-options="c.doc_category as c.doc_category for c in docq.selectOptions['doc_category']">
           </select>
-        </div>
+        </div> -->
 
         <!-- 筛选2 选择适用文件 -->
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label>选择适用文件</label>
           <select class="form-control input-sm margin-bottom" ng-model="docq.selectedRefDoc"
             ng-options="c.refer_to as c.refer_to for c in docq.selectOptions['refer_to']">
           </select>
-        </div>
+        </div> --> 
 
 
 
@@ -76,7 +76,7 @@
               </th>
               <th scope="col">文件名称</th>
               <th scope="col">文件版本</th>
-              <th scope="col">适用平台</th>
+              <th scope="col">文件编码</th>
               <!-- <th scope="col" class="lg_tab_col">文件描述</th> -->
             </tr>
           </thead>
@@ -91,7 +91,7 @@
             <td><a href="{{item.url}}" target="_blank" class="download_tag">下载</a></td>
             <td><span ng-class="item.status">{{item.doc_name}}</span></td>
             <td>{{item.rev}}</td>
-            <td>{{item.platform}}</td>
+            <td>{{item.doc_index}}</td>
             <!-- <td>{{item.description}}</td> -->
           </tr>
           </tbody>
